Fixed many gx-image issues
 - issue: 95528. Fix incorrect image centering when setting margin and width.

 - issue: 95540. Add support for horizontal alignment when the width is set.

 - issue: 95562. Images will scale their appearance when we zoom in or out in the browser.

 - issue: 95567. Reset width and height values when the class attribute is changed at runtime, and the class does not have those properties.

 - issue: 95568. Add support for width property when the gx-image has auto-grow = True.

 - issue: 95509. Fix gx-image-picker not showing the "change" button when image overflows vertically.

--- a/src/components/image/image.scss
+++ b/src/components/image/image.scss
@@ -1,4 +1,4 @@
-@import "../common/_base";
+@import "../common/base";
 
 gx-image {
   @include container-margins();
@@ -8,15 +8,31 @@ gx-image {
   --width: 100%;
   --height: 100%;
 
+  position: relative;
   flex: 1;
+  align-self: stretch;
+  width: 100%;
   overflow-x: hidden; // Horizontal overflow is always hidden
 
   &.gx-img-lazyloading {
     overflow: hidden;
   }
 
+  // gx-image with auto-grow = FALSE
+  &.gx-img-no-auto-grow {
+    overflow-y: hidden; // Vertical overflow is hidden if auto-grow = False
+
+    > .inner-image {
+      position: absolute;
+    }
+  }
+
   > .inner-image {
     @include elevation();
+    width: var(--width);
+    height: var(--height);
+
+    // Default Scale Type = Fit
     object-fit: var(--image-scale-type, contain);
   }
 
